<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>mc.rellox</groupId>
  <artifactId>SpawnerMeta</artifactId>
  <version>21.0</version>
  <name>SpawnerMeta</name>
  <description>Implements spawner customization and upgrading</description>
  
  <repositories>
  	<repository>
	  <id>jitpack.io</id>
	  <url>https://jitpack.io</url>
    </repository>
  </repositories>
	
  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.19.4-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
	    <groupId>com.github.brcdev-minecraft</groupId>
	    <artifactId>shopgui-api</artifactId>
	    <version>3.0.0</version>
	    <scope>provided</scope>
	</dependency>
  </dependencies>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>16</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>